# idempotency-audit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/idempotency_audit/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_idempotency_audit.py
